package org.biobank.infrastructure.event;

message UserRegisteredEvent {
   optional string name      = 1;
   optional string email     = 2;
   optional string password  = 3;
   optional string salt      = 4;
   optional string avatarUrl = 5;
}

message UserNameUpdatedEvent {
   optional int64 version = 1;
   optional string name   = 2;
}

message UserEmailUpdatedEvent {
   optional int64 version = 1;
   optional string email  = 2;
}

message UserAvatarUrlUpdatedEvent {
   optional int64 version    = 1;
   optional string avatarUrl = 2;
}

message UserPasswordUpdatedEvent {
   optional int64 version   = 1;
   optional string password = 2;
   optional string salt     = 3;
}

message UserPasswordResetEvent {
   optional int64  version  = 1;
   optional string password = 2;
   optional string salt     = 3;
}

message UserActivatedEvent {
   optional int64 version = 1;
}

message UserLockedEvent {
   optional int64 version = 1;
}

message UserUnlockedEvent {
   optional int64 version = 1;
}

message UserEvent {
   required string id     = 1;
   optional string userId = 2;
   optional string time   = 3;

   oneof event_type {
     UserRegisteredEvent       registered       = 4;
     UserNameUpdatedEvent      nameUpdated      = 5;
     UserEmailUpdatedEvent     emailUpdated     = 6;
     UserAvatarUrlUpdatedEvent avatarUrlUpdated = 7;
     UserPasswordUpdatedEvent  passwordUpdated  = 8;
     UserPasswordResetEvent    passwordReset    = 9;
     UserActivatedEvent        activated        = 10;
     UserLockedEvent           locked           = 11;
     UserUnlockedEvent         unlocked         = 12;
   }
}
